--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,7 @@
         <repository>
             <id>github</id>
             <name>GitHub Maven Packages</name>
-            <url>https://maven.pkg.github.com/IceMimosa/geocoding</url>
+            <url>https://maven.pkg.github.com/datavisorxiaomingjin/geocoding</url>
         </repository>
     </distributionManagement>
 </project>
